--- a/versions/v2.11/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
+++ b/versions/v2.11/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
@@ -4,6 +4,12 @@
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/register-existing-clusters.adoc 
 :product-path: cluster-deployment/register-existing-clusters.adoc
+ifeval::["{build-type}" != "community"]
+:xref-kubeconfig-file: xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-kubeconfig-file: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
+endif::[]
 
 The cluster registration feature replaced the feature to import clusters.
 
@@ -220,7 +226,7 @@ To prevent issues when upgrading, the https://kubernetes.io/docs/tasks/administe
 
 == Authorized Cluster Endpoint Support for {rke2-product-name} and {k3s-product-name} Clusters
 
-Rancher supports Authorized Cluster Endpoints (ACE) for registered RKE2 and K3s clusters. This support includes manual steps you will perform on the downstream cluster to enable the ACE. For additional information on the authorized cluster endpoint, click xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[here].
+Rancher supports Authorized Cluster Endpoints (ACE) for registered RKE2 and K3s clusters. This support includes manual steps you will perform on the downstream cluster to enable the ACE. For additional information on the authorized cluster endpoint, click {xref-kubeconfig-file}[here].
 
 [NOTE]
 .Notes:
@@ -228,7 +234,7 @@ Rancher supports Authorized Cluster Endpoints (ACE) for registered RKE2 and K3s 
 
 * These steps only need to be performed on the control plane nodes of the downstream cluster. You must configure each control plane node individually.
 * The following steps will work on both RKE2 and K3s clusters registered in v2.6.x as well as those registered (or imported) from a previous version of Rancher with an upgrade to v2.6.x.
-* These steps will alter the configuration of the downstream RKE2 and K3s clusters and deploy the `kube-api-authn-webhook`. If a future implementation of the ACE requires an update to the `kube-api-authn-webhook`, then this would also have to be done manually. For more information on this webhook, click xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc#_about_the_kube_api_auth_authentication_webhook[here].
+* These steps will alter the configuration of the downstream RKE2 and K3s clusters and deploy the `kube-api-authn-webhook`. If a future implementation of the ACE requires an update to the `kube-api-authn-webhook`, then this would also have to be done manually. For more information on this webhook, click {xref-kubeconfig-file}#_about_the_kube_api_auth_authentication_webhook[here].
 ====
 
 
