--- a/versions/v2.9/modules/en/pages/cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
+++ b/versions/v2.9/modules/en/pages/cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
@@ -5,6 +5,12 @@
 :community-path: how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc 
 :product-path: cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
 :experimental:
+ifeval::["{build-type}" != "community"]
+:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
+endif::[]
 
 In this section, you'll learn how to manage Helm chart repositories and apps in Rancher.
 
@@ -211,9 +217,9 @@ If you are upgrading your chart using *Customize Helm options before upgrade*, a
 
 The upgrade button isn't available for legacy apps on the menu:Apps[Installed Apps] page.
 
-If you want to upgrade an installed legacy app, the xref:rancher-admin/experimental-features/experimental-features.adoc[legacy feature flag] must be turned on. This flag is automatically turned on if you had a legacy app already running before you upgraded Rancher.
+If you want to upgrade an installed legacy app, the {xref-experimental-features}[legacy feature flag] must be turned on. This flag is automatically turned on if you had a legacy app already running before you upgraded Rancher.
 
-. Enable the xref:rancher-admin/experimental-features/experimental-features.adoc[legacy feature flag], if it isn't enabled already.
+. Enable the {xref-experimental-features}[legacy feature flag], if it isn't enabled already.
 . Click *☰ > Cluster Management*.
 . Find the name of the cluster whose apps you want to access. Click *Explore* at the end of the cluster's row.
 . Click menu:Legacy[Project > Apps].
