--- a/versions/v2.10/modules/en/pages/rancher-admin/experimental-features/continuous-delivery.adoc
+++ b/versions/v2.10/modules/en/pages/rancher-admin/experimental-features/continuous-delivery.adoc
@@ -4,10 +4,16 @@
 :page-revdate: {revdate}
 :community-path: how-to-guides/advanced-user-guides/enable-experimental-features/continuous-delivery.adoc 
 :product-path: rancher-admin/experimental-features/continuous-delivery.adoc
+ifeval::["{build-type}" != "community"]
+:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
+endif::[]
 
 xref:integrations/fleet/fleet.adoc[Continuous Delivery with Fleet] comes preinstalled in Rancher and can't be fully disabled. However, the Fleet feature for GitOps continuous delivery may be disabled using the `continuous-delivery` feature flag.
 
-To enable or disable this feature, refer to the instructions on xref:rancher-admin/experimental-features/experimental-features.adoc[the main page about enabling experimental features.]
+To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]
 
 |===
 | Environment Variable Key | Default Value | Description
