--- a/versions/v2.13/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
@@ -7,6 +7,12 @@ endif::[]
 :community-path: how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc 
 :product-path: cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
 :description: Learn how you can access and manage your Kubernetes clusters using kubectl with kubectl Shell or with kubectl CLI and kubeconfig file. A kubeconfig file is used to configure access to Kubernetes. When you create a cluster with Rancher, it automatically creates a kubeconfig for your cluster.
+ifeval::["{build-type}" != "community"]
+:xref-kubeconfig-file: xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-kubeconfig-file: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
+endif::[]
 
 This section describes how to manipulate your downstream Kubernetes cluster with kubectl from the Rancher UI or from your workstation.
 
@@ -54,7 +60,7 @@ Rancher will discover and show resources created by `kubectl`. However, these re
 
 This section intended to help you set up an alternative method to access a xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched cluster].
 
-This method is only available RKE2 and K3s clusters that have the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint] enabled. When Rancher creates the cluster, it generates a kubeconfig file that includes additional kubectl context(s) for accessing your cluster. This additional context allows you to use kubectl to authenticate with the downstream cluster without authenticating through Rancher. For a longer explanation of how the authorized cluster endpoint works, refer to xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[this page].
+This method is only available RKE2 and K3s clusters that have the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint] enabled. When Rancher creates the cluster, it generates a kubeconfig file that includes additional kubectl context(s) for accessing your cluster. This additional context allows you to use kubectl to authenticate with the downstream cluster without authenticating through Rancher. For a longer explanation of how the authorized cluster endpoint works, refer to {xref-kubeconfig-file}[this page].
 
 On RKE2 and K3s clusters, you need to xref:cluster-deployment/register-existing-clusters.adoc#_authorized_cluster_endpoint_support_for_rke2_and_k3s_clusters[manually enable] authorized cluster endpoints.
 
