--- a/versions/v2.13/modules/en/pages/rancher-admin/cli/kubectl.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/cli/kubectl.adoc
@@ -6,6 +6,12 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: reference-guides/cli-with-rancher/kubectl-utility.adoc 
 :product-path: rancher-admin/cli/kubectl.adoc
+ifeval::["{build-type}" != "community"]
+:xref-rancher-cli: xref:rancher-admin/cli/rancher-cli.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-rancher-cli: xref:reference-guides/cli-with-rancher/rancher-cli.adoc
+endif::[]
 
 == kubectl
 
@@ -23,7 +29,7 @@ Run `kubectl cluster-info` or `kubectl get pods` successfully.
 
 _Requirements_
 
-If admins have xref:api/api-tokens.adoc#_disable_tokens_in_generated_kubeconfigs[kubeconfig token generation turned off], the kubeconfig file requires the xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI] to be present in your PATH when you run `kubectl`. Otherwise, you'll see an error like:
+If admins have xref:api/api-tokens.adoc#_disable_tokens_in_generated_kubeconfigs[kubeconfig token generation turned off], the kubeconfig file requires the {xref-rancher-cli}[Rancher CLI] to be present in your PATH when you run `kubectl`. Otherwise, you'll see an error like:
 `Unable to connect to the server: getting credentials: exec: exec: "rancher": executable file not found in $PATH`.
 
 This feature enables kubectl to authenticate with the Rancher server and get a new kubeconfig token when required. The following auth providers are currently supported:
