--- a/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/istio-traffic-management-features.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/istio-traffic-management-features.adoc
@@ -6,6 +6,12 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: how-to-guides/advanced-user-guides/enable-experimental-features/istio-traffic-management-features.adoc 
 :product-path: rancher-admin/experimental-features/istio-traffic-management-features.adoc
+ifeval::["{build-type}" != "community"]
+:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
+endif::[]
 
 This feature enables a UI that lets you create, read, update and delete virtual services and destination rules, which are traffic management features of Istio.
 
@@ -13,7 +19,7 @@ ____
 *Prerequisite:* Turning on this feature does not enable Istio. A cluster administrator needs to xref:observability/istio/guides/guides.adoc[enable Istio for the cluster] in order to use the feature.
 ____
 
-To enable or disable this feature, refer to the instructions on xref:rancher-admin/experimental-features/experimental-features.adoc[the main page about enabling experimental features.]
+To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]
 
 |===
 | Environment Variable Key | Default Value | Status | Available as of
