--- a/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/unsupported-storage-drivers.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/unsupported-storage-drivers.adoc
@@ -6,10 +6,16 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: how-to-guides/advanced-user-guides/enable-experimental-features/unsupported-storage-drivers.adoc 
 :product-path: rancher-admin/experimental-features/unsupported-storage-drivers.adoc
+ifeval::["{build-type}" != "community"]
+:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
+endif::[]
 
 This feature allows you to use types for storage providers and provisioners that are not enabled by default.
 
-To enable or disable this feature, refer to the instructions on xref:rancher-admin/experimental-features/experimental-features.adoc[the main page about enabling experimental features.]
+To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]
 
 |===
 | Environment Variable Key | Default Value | Description
