--- a/versions/v2.13/modules/en/pages/rancher-admin/users/settings/api-keys.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/settings/api-keys.adoc
@@ -7,6 +7,12 @@ endif::[]
 :community-path: reference-guides/user-settings/api-keys.adoc 
 :product-path: rancher-admin/users/settings/api-keys.adoc
 :experimental:
+ifeval::["{build-type}" != "community"]
+:xref-rancher-cli: xref:rancher-admin/cli/rancher-cli.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-rancher-cli: xref:reference-guides/cli-with-rancher/rancher-cli.adoc
+endif::[]
 
 == API Keys and User Authentication
 
@@ -52,7 +58,7 @@ Use the *Bearer Token* to authenticate with Rancher CLI.
 
 * Enter your API key information into the application that sends requests to the Rancher API.
 * Learn more about the Rancher endpoints and parameters by selecting *View in API* for an object in the Rancher UI.
-* API keys are used for API calls and xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI].
+* API keys are used for API calls and {xref-rancher-cli}[Rancher CLI].
 
 == Deleting API Keys
 
