Single source URLs - installation-and-upgrade/requirements/requirements

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
@@ -7,6 +7,18 @@ endif::[]
 :community-path: getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc 
 :product-path: installation-and-upgrade/requirements/requirements.adoc
 :description: Learn the node requirements for each node running Rancher server when you’re configuring  Rancher to run either in a Docker or Kubernetes setup
+ifeval::["{build-type}" != "community"]
+:url-k3s-advanced-docker-runtime: https://documentation.suse.com/cloudnative/k3s/latest/en/advanced.html#_using_docker_as_the_container_runtime
+:url-rke2-requirements: https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html
+:url-k3s-datastore: https://documentation.suse.com/cloudnative/k3s/latest/en/datastore/datastore.html
+:url-k3s-requirements: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/requirements.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-k3s-advanced-docker-runtime: https://docs.k3s.io/advanced#using-docker-as-the-container-runtime
+:url-rke2-requirements: https://docs.rke2.io/install/requirements
+:url-k3s-datastore: https://docs.k3s.io/datastore
+:url-k3s-requirements: https://docs.k3s.io/installation/requirements
+endif::[]
 
 This page describes the software, hardware, and networking requirements for the nodes where the Rancher server will be installed. The Rancher server can be installed on a single node or a high-availability Kubernetes cluster.
 
@@ -62,7 +74,7 @@ For details on which OS versions were tested with RKE2, refer to the https://www
 
 === {k3s-product-name} Specific Requirements
 
-For the container runtime, K3s bundles its own containerd by default. Alternatively, you can configure K3s to use an already installed Docker runtime. For more information on using K3s with Docker see the https://documentation.suse.com/cloudnative/k3s/latest/en/advanced.html#_using_docker_as_the_container_runtime[K3s documentation.]
+For the container runtime, K3s bundles its own containerd by default. Alternatively, you can configure K3s to use an already installed Docker runtime. For more information on using K3s with Docker see the {url-k3s-advanced-docker-runtime}[K3s documentation.]
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions[Rancher support matrix]. To specify the K3s version, use the INSTALL_K3S_VERSION environment variable when running the K3s installation script.
 
@@ -151,7 +163,7 @@ Please note that a highly available setup with at least three nodes is required 
 
 (†): Larger deployment sizes are generally possible with ad-hoc hardware recommendations and tuning. You can https://rancher.com/contact/[contact Rancher] for a custom evaluation.
 
-Refer to RKE2 documentation for more detailed information on https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html[RKE2 general requirements].
+Refer to RKE2 documentation for more detailed information on {url-rke2-requirements}[RKE2 general requirements].
 
 === {k3s-product-name} Kubernetes
 
@@ -184,11 +196,11 @@ Please note that a highly available setup with at least three nodes is required 
 | 8 vCPUs, 32 GB + 4000 IOPS
 |===
 
-(*): External Database Host refers to hosting the K3s cluster data store on an https://documentation.suse.com/cloudnative/k3s/latest/en/datastore/datastore.html[dedicated external host]. This is optional. Exact requirements depend on the external data store.
+(*): External Database Host refers to hosting the K3s cluster data store on an {url-k3s-datastore}[dedicated external host]. This is optional. Exact requirements depend on the external data store.
 
 (†): Large deployments require that you xref:installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc[follow best practices] for adequate performance.
 
-Refer to the K3s documentation for more detailed information on https://documentation.suse.com/cloudnative/k3s/latest/en/installation/requirements.html[general requirements].
+Refer to the K3s documentation for more detailed information on {url-k3s-requirements}[general requirements].
 
 === Hosted Kubernetes
 
