Add RN for Cluster Autoscaler Major Bug Fix #53915

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
@@ -66,6 +66,14 @@ endif::[]
 
 - Fixed an issue where Rancher Turtles OCI chart repositories failed to install correctly. You can now install and manage Rancher Turtles Certified Providers from the Rancher Apps. If you previously encountered errors or saw duplicate versions when attempting to install this providers chart, please re-add the repository and refresh your repositories to see the changes. See https://github.com/rancher/rancher/issues/53845[#53845].
 
+ifeval::["{build-type}" != "community"]
+== Cluster Autoscaler
+
+=== Major Bug Fixes
+
+- Fixed a bug where the Cluster Autoscaler failed to install on downstream clusters due to incorrect Helm chart and image registry paths. This resolution ensures that the Cluster Autoscaler feature can be successfully enabled and deployed via the Rancher UI without manual configuration. See https://github.com/rancher/rancher/issues/53915[53915].
+endif::[]
+
 == Install/Upgrade Notes
 
 If you're installing Rancher for the first time, your environment must fulfill the {rn-installation-requirements}[installation requirements].
