--- a/versions/v2.9/modules/en/pages/installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc
+++ b/versions/v2.9/modules/en/pages/installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc
@@ -4,6 +4,12 @@
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/kubernetes-cluster-setup/rke2-for-rancher.adoc 
 :product-path: installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc
+ifeval::["{build-type}" != "community"]
+:url-rke2-cluster-access: https://documentation.suse.com/cloudnative/rke2/latest/en/cluster_access.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-rke2-cluster-access: https://docs.rke2.io/cluster_access
+endif::[]
 
 This section describes how to install a Kubernetes cluster according to the xref:about-rancher/architecture/recommendations.adoc#_environment_for_kubernetes_installations[best practices for the Rancher server environment.]
 
@@ -124,7 +130,7 @@ users:
 kubectl --kubeconfig ~/.kube/config/rke2.yaml get pods --all-namespaces
 ----
 
-For more information about the `kubeconfig` file, refer to the https://documentation.suse.com/cloudnative/rke2/latest/en/cluster_access.html[RKE2 documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
+For more information about the `kubeconfig` file, refer to the {url-rke2-cluster-access}[RKE2 documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
 
 === 4. Check the Health of Your Cluster Pods
 
