Single source URLs - installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -6,6 +6,18 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-kubernetes.adoc 
 :product-path: installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+ifeval::["{build-type}" != "community"]
+:url-rke2-install-ha: https://documentation.suse.com/cloudnative/rke2/latest/en/install/ha.html
+:url-rke2-containerd-reg-config: https://documentation.suse.com/cloudnative/rke2/latest/en/install/containerd_registry_configuration.html
+:url-rke2-install-airgap: https://documentation.suse.com/cloudnative/rke2/latest/en/install/airgap.html
+:url-rke2-cluster-access: https://documentation.suse.com/cloudnative/rke2/latest/en/cluster_access.html 
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-rke2-install-ha: https://docs.rke2.io/install/ha
+:url-rke2-containerd-reg-config: https://docs.rke2.io/install/private_registry
+:url-rke2-install-airgap: https://docs.rke2.io/install/airgap
+:url-rke2-cluster-access: https://docs.rke2.io/cluster_access
+endif::[]
 
 [NOTE]
 ====
@@ -181,7 +193,7 @@ tls-san:
   - loadbalancer-dns-domain.com
 ----
 
-For more information, refer to the https://documentation.suse.com/cloudnative/rke2/latest/en/install/ha.html[RKE2 documentation].
+For more information, refer to the {url-rke2-install-ha}[RKE2 documentation].
 
 [NOTE]
 ====
@@ -213,7 +225,7 @@ configs:
       ca_file: <path to the ca file used in the registry>
 ----
 
-For more information on private registries configuration file for RKE2, refer to the https://documentation.suse.com/cloudnative/rke2/latest/en/install/containerd_registry_configuration.html[RKE2 documentation.]
+For more information on private registries configuration file for RKE2, refer to the {url-rke2-containerd-reg-config}[RKE2 documentation.]
 
 [pass]
 <h2><a id="_3_install_rke2"></a>3. Install RKE2</h2>
@@ -243,7 +255,7 @@ systemctl enable rke2-server.service
 systemctl start rke2-server.service
 `
 
-For more information, refer to the https://documentation.suse.com/cloudnative/rke2/latest/en/install/airgap.html[RKE2 documentation].
+For more information, refer to the {url-rke2-install-airgap}[RKE2 documentation].
 
 [pass]
 <h2><a id="_4_save_and_start_using_the_kubeconfig_file"></a>4. Save and Start Using the kubeconfig File</h2>
@@ -284,7 +296,7 @@ users:
 kubectl --kubeconfig ~/.kube/config/rke2.yaml get pods --all-namespaces
 ----
 
-For more information about the `kubeconfig` file, refer to the https://documentation.suse.com/cloudnative/rke2/latest/en/cluster_access.html[RKE2 documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
+For more information about the `kubeconfig` file, refer to the {url-rke2-cluster-access}[RKE2 documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
 
 [pass]
 <h2><a id="_note_on_upgrading"></a>Note on Upgrading</h2>
