--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
@@ -4,6 +4,16 @@
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-kubernetes.adoc 
 :product-path: installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
+ifeval::["{build-type}" != "community"]
+:url-k3s-installation: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/installation.html
+:url-rke2-install-ha: https://documentation.suse.com/cloudnative/rke2/latest/en/install/ha.html
+:url-rke2-introduction: https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-k3s-installation: https://docs.k3s.io/installation
+:url-rke2-install-ha: https://docs.rke2.io/install/ha
+:url-rke2-introduction: https://docs.rke2.io/
+endif::[]
 
 Once the infrastructure is ready, you can continue with setting up a Kubernetes cluster to install Rancher in.
 
@@ -58,7 +68,7 @@ curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION=<VERSION> K3S_TOKEN=<TOKEN> s
 
 Where `<SERVER>` is the IP or valid DNS of the server and `<TOKEN>` is the node-token from the server found at `/var/lib/rancher/k3s/server/node-token`.
 
-For more information on installing K3s see the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/installation.html[K3s installation docs].
+For more information on installing K3s see the {url-k3s-installation}[K3s installation docs].
 
 To have a look at your cluster run:
 
@@ -87,7 +97,7 @@ NO_PROXY=127.0.0.0/8,10.0.0.0/8,cattle-system.svc,172.16.0.0/12,192.168.0.0/16,.
 EOF
 ----
 
-Next create the RKE2 configuration file on every node following the https://documentation.suse.com/cloudnative/rke2/latest/en/install/ha.html[RKE2 High Availability documentation].
+Next create the RKE2 configuration file on every node following the {url-rke2-install-ha}[RKE2 High Availability documentation].
 
 After that start and enable the `rke2-server` service:
 
@@ -96,7 +106,7 @@ systemctl enable rke2-server.service
 systemctl start rke2-server.service
 ----
 
-For more information on installing RKE2 see the https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2 documentation].
+For more information on installing RKE2 see the {url-rke2-introduction}[RKE2 documentation].
 
 To have a look at your cluster run:
 
