Single source URLs - cluster-deployment/launch-kubernetes-with-rancher

--- a/versions/v2.13/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
@@ -6,8 +6,18 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/launch-kubernetes-with-rancher/launch-kubernetes-with-rancher.adoc 
 :product-path: cluster-deployment/launch-kubernetes-with-rancher.adoc
+ifeval::["{build-type}" != "community"]
+:url-rke2-introduction: https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html
+:url-k3s: https://documentation.suse.com/cloudnative/k3s
+:url-rke2-requirements: https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-k3s: https://docs.k3s.io/
+:url-rke2-introduction: https://docs.rke2.io/
+:url-rke2-requirements: https://docs.rke2.io/install/requirements
+endif::[]
 
-Rancher allows you to launch a Kubernetes cluster on different types of nodes, including bare-metal servers, on-premise virtual machines, and virtual machines from an infrastructure provider. When deploying Kubernetes to these nodes, Rancher gives you the option to use https://documentation.suse.com/cloudnative/rke2[RKE2] or https://documentation.suse.com/cloudnative/k3s[K3s].
+Rancher allows you to launch a Kubernetes cluster on different types of nodes, including bare-metal servers, on-premise virtual machines, and virtual machines from an infrastructure provider. When deploying Kubernetes to these nodes, Rancher gives you the option to use {url-rke2-introduction}[RKE2] or {url-k3s}[K3s].
 
 Rancher can install Kubernetes on existing nodes, or it can dynamically provision nodes in an infrastructure provider and install Kubernetes on them.
 
@@ -15,13 +25,13 @@ Rancher can also create pools of machines. One benefit of installing Kubernetes 
 
 == {rke2-product-name}
 
-Rancher v2.6 introduced provisioning for https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2] clusters directly from the Rancher UI. RKE2, also known as RKE Government, is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector. In Rancher v.2.6.4 and earlier, RKE2 provisioning was in tech preview.
+Rancher v2.6 introduced provisioning for {url-rke2-introduction}[RKE2] clusters directly from the Rancher UI. RKE2, also known as RKE Government, is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector. In Rancher v.2.6.4 and earlier, RKE2 provisioning was in tech preview.
 
 Note that in Rancher v2.6.5, RKE2 provisioning became GA.
 
 === Requirements
 
-If you use RKE2 to set up a cluster, your nodes must meet the https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html[requirements] for nodes in downstream user clusters.
+If you use RKE2 to set up a cluster, your nodes must meet the {url-rke2-requirements}[requirements] for nodes in downstream user clusters.
 
 === Launching Kubernetes on New Nodes in an Infrastructure Provider
 
