--- a/versions/v2.9/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
+++ b/versions/v2.9/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
@@ -4,8 +4,16 @@
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc 
 :product-path: cluster-deployment/launch-kubernetes-with-rancher.adoc
+ifeval::["{build-type}" != "community"]
+:url-rke2-introduction: https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html
+:url-rke2-requirements: https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-rke2-introduction: https://docs.rke2.io/
+:url-rke2-requirements: https://docs.rke2.io/install/requirements
+endif::[]
 
-You can have Rancher launch a Kubernetes cluster using any nodes you want. When Rancher deploys Kubernetes onto these nodes, you can choose between https://rancher.com/docs/rke/latest/en/[Rancher Kubernetes Engine] (RKE) or https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2] distributions. Rancher can launch Kubernetes on any computers, including:
+You can have Rancher launch a Kubernetes cluster using any nodes you want. When Rancher deploys Kubernetes onto these nodes, you can choose between https://rancher.com/docs/rke/latest/en/[Rancher Kubernetes Engine] (RKE) or {url-rke2-introduction}[RKE2] distributions. Rancher can launch Kubernetes on any computers, including:
 
 * Bare-metal servers
 * On-premise virtual machines
@@ -43,13 +51,13 @@ The most common way to programmatically deploy RKE clusters through Rancher is b
 
 == {rke2-product-name}
 
-Rancher v2.6 introduced provisioning for https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2] clusters directly from the Rancher UI. RKE2, also known as RKE Government, is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector. In Rancher v.2.6.4 and earlier, RKE2 provisioning was in tech preview.
+Rancher v2.6 introduced provisioning for {url-rke2-introduction}[RKE2] clusters directly from the Rancher UI. RKE2, also known as RKE Government, is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector. In Rancher v.2.6.4 and earlier, RKE2 provisioning was in tech preview.
 
 Note that in Rancher v2.6.5, RKE2 provisioning became GA.
 
 === Requirements
 
-If you use RKE2 to set up a cluster, your nodes must meet the https://documentation.suse.com/cloudnative/rke2/latest/en/install/requirements.html[requirements] for nodes in downstream user clusters.
+If you use RKE2 to set up a cluster, your nodes must meet the {url-rke2-requirements}[requirements] for nodes in downstream user clusters.
 
 === Launching Kubernetes on New Nodes in an Infrastructure Provider
 
