--- a/versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -9,7 +9,7 @@ ifeval::["{build-type}" != "community"]
 :url-rke2-uninstall: https://documentation.suse.com/cloudnative/rke2/latest/en/install/uninstall.html
 endif::[]
 ifeval::["{build-type}" == "community"]
-:url-rke2-uninstall: https://documentation.suse.com/cloudnative/rke2/latest/en/install/uninstall.html
+:url-rke2-uninstall: https://docs.rke2.io/install/uninstall
 endif::[]
 
 This section describes how to disconnect a node from a Rancher-launched Kubernetes cluster and remove all of the Kubernetes components from the node. This process allows you to use the node for other purposes.
