--- a/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
@@ -11,7 +11,7 @@ ifeval::["{build-type}" != "community"]
 :url-continuous-delivery-gitreo-add: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-users/gitrepo-add.html#_backing_up_and_restoring
 endif::[]
 ifeval::["{build-type}" == "community"]
-:url-continuous-delivery-gitreo-add: https://fleet.rancher.io/next/how-tos-for-users/gitrepo-add
+:url-continuous-delivery-gitreo-add: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-users/gitrepo-add
 endif::[]
 
 This page outlines how to perform a restore with Rancher.
