--- a/versions/v2.12/modules/en/pages/release-notes/v2.12.7.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes/v2.12.7.adoc
@@ -14,7 +14,7 @@ ifeval::["{build-type}" == "community"]
 :rn-viewing-api-audit-logs: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the
 :rn-enable-api-audit-log: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/enable-api-audit-log
 :rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
-:rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
+:rn-install-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
 :rn-private-registry: https://docs.k3s.io/installation/private-registry
 endif::[]
 ifeval::["{build-type}" != "community"]
