--- a/versions/v2.11/modules/en/pages/release-notes/v2.11.11.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes/v2.11.11.adoc
@@ -9,7 +9,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
-:rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
+:rn-install-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
 :rn-private-registry: https://docs.k3s.io/installation/private-registry
 endif::[]
 ifeval::["{build-type}" != "community"]
