--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
@@ -71,7 +71,7 @@ ifeval::["{build-type}" != "community"]
 
 === Major Bug Fixes
 
-- Fixed a bug where the Cluster Autoscaler failed to install on downstream clusters due to incorrect Helm chart and image registry paths. This resolution ensures that the Cluster Autoscaler feature can be successfully enabled and deployed via the Rancher UI without manual configuration. See https://github.com/rancher/rancher/issues/53915[53915].
+- Fixed a bug where the Cluster Autoscaler failed to install on downstream clusters due to incorrect Helm chart and image registry paths. This resolution ensures that the Cluster Autoscaler feature can be successfully enabled and deployed via the Rancher UI without manual configuration. See https://github.com/rancher/rancher/issues/53915[#53915].
 endif::[]
 
 == Install/Upgrade Notes
