Update rn-install-rancher attribute in zh RNs

--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.3.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.3.adoc
@@ -25,7 +25,7 @@ ifeval::["{build-type}" != "community"]
 :rn-viewing-api-audit-logs: xref:observability/logging/enable-api-audit-log.adoc#_api_audit_log_options
 :rn-enable-api-audit-log: xref:observability/logging/enable-api-audit-log.adoc
 :rn-back-up-rancher: xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
-:rn-install-rancher: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+:rn-install-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
 :rn-private-registry: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html
 endif::[]
 
